# M-Web-Server

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  INSTALL.md  M-Restful-Services-White-Paper.md  NOTICE  README.md  README.rst  install.sh
doc/: INSTALL.md  basic-usage.md  debugging.md  dockerfile-notes.md  documentation-basic-usage.md  documentation-important-utilities.md  documentation-testing.md  documentation-vista-integration.md  important-utilities.md  packaging.md  start-stop.md  testing.md  tls-setup.md  vista-integration.md
src/: %W.zwr  CMakeLists.txt  VPRJREQ.m  VPRJRSP.m  VPRJRUT.m  VPRJSON.m  VPRJSOND.m  VPRJSONE.m  VPRJTJD.m  VPRJTJDD.m  VPRJTJE.m  VPRJTJED.m  VPRJUJ01.m  VPRJUJ02.m  VPRJUJD.m  VPRJUJE.m  WWWINIT.m  _W0.m  _WC.m  _WHOME.m  _webapi.m  _webhome.m  _webjson.m  _webjsonDecode.m  _webjsonDecodeTest.m  _webjsonEncode.m  _webjsonEncodeTest.m  _webjsonTestData1.m  _webjsonTestData2.m  _webreq.m  _webrsp.m  _webtest.m  _weburl.m  _webutils.m  _webutils0.m  example.TLS.xinetd  example.stunnel.conf  example.xientd.client  example.xinetd.TLS  example.xinetd.cleartext  (+1 more)
src/INIT-for-%W/: _WINI001.m  _WINI002.m  _WINI003.m  _WINIT.m  _WINIT1.m  _WINIT2.m  _WINIT3.m  _WINIT4.m  _WINIT5.m
src/init/: _webI001.m  _webI002.m  _webINI1.m  _webINI2.m  _webINI3.m  _webINI4.m  _webINI5.m  _webINIT.m
ydbcmake/: CMakeDetermineMCompiler.cmake  CMakeDetermineMUMPSCompiler.cmake  CMakeMCompiler.cmake.in  CMakeMInformation.cmake  CMakeMUMPSCompiler.cmake.in  CMakeMUMPSInformation.cmake  CMakeTestMCompiler.cmake  CMakeTestMUMPSCompiler.cmake  FindYOTTADB.cmake
